# walrs_old

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  config.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: commands.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  models.rs
common/src/codecs/: decoder.rs  encoder.rs
core/: Cargo.toml  Dockerfile  Makefile
core/src/: main.rs  models.rs
core/src/managers/: consumer_manager.rs  mod.rs  partition_manager.rs  producer_manager.rs  topics_manager.rs
hooks/: pre-commit
k8s/: core.yml  prerequisites.yml
walrs_core/: Cargo.toml  Dockerfile  Makefile
walrs_core/src/: file_read_write_test.rs  models.rs
walrs_core/src/managers/: mod.rs  producer_manager.rs  topics_manager.rs
