[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
clap = { version = "4.5.16", features = ["derive"] }
bincode = "1.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-util = {version = "0.7.11", features = ["codec"]}
bytes = {version = "1.7.1", features = ["serde"]}
