[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.208", features = ["derive"]}
tokio-util = {version = "0.7.11", features = ["codec"]}
bincode = "1.3.3"
bytes = {version = "1.7.1", features = ["serde"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
