[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
bincode = "1.3.3"
bytes = {version = "1.7.1", features = ["serde"]}
serde = {version = "1.0.208", features = ["derive"]}

tokio = {version = "1.39.3", features = ["signal","net","tracing","rt-multi-thread","macros","fs","io-util"]}
tokio-util = {version = "0.7.11", features = ["codec", "rt"]}

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempdir = "0.3.7"
tokio-test = "0.4.4"
test-log = {version = "0.2.16", features = ["trace"]}